--- a/src/app/componenst/header/header.component.html
+++ b/src/app/componenst/header/header.component.html
@@ -1,1 +1,8 @@
-<h1> Header</h1>
+<menu>
+    <ul>
+        <li>
+            <a routerLink="/">Home</a>
+            <a routerLink="/add">Nuevo</a>
+        </li>
+    </ul>
+</menu>
