--- a/src/app/components/items/items.component.html
+++ b/src/app/components/items/items.component.html
@@ -1,5 +1,5 @@
 <div>
-    <div *ngFor="let item for items">
-        {{item.title}}
-    </div>
+    <app-item *ngFor="let item of items"
+    [item]="item"
+    (DeleteItem)="DeleteItem(sevent)"></app-item>
 </div>
