Realice el arreglo total

--- a/src/app/components/items/items.component.html
+++ b/src/app/components/items/items.component.html
@@ -1,4 +1,5 @@
 <div>
+    <app-total mensaje="Total por pagar: " [total]="total"></app-total>
     <app-item *ngFor="let item of items"
     [item]="item"
     (DeleteItem)="DeleteItem(sevent)"></app-item>
