Comandos en additem/component

--- a/src/app/components/additem/additem.component.html
+++ b/src/app/components/additem/additem.component.html
@@ -1,1 +1,19 @@
-<p>additem works!</p>
+<form action="">
+    <h2>Registrar un nuevo articulo</h2>
+    <div>
+        <label for="">Nombre del articulo</label>
+        <label type="text" name="title" id="" [(ngModule)]="title"> </label>
+    </div>
+
+    <div>
+        <label for="">Precio</label>
+        <label type="text" name="price" id="" [(ngModule)]="price"> </label>
+    </div>
+
+    <div>
+        <label for="">Cantidad</label>
+        <label type="text" name="quantity" id="" [(ngModule)]="quantity"> </label>
+    </div>
+
+    <input type="submit" value="Crear">
+</form>
